--- a/install
+++ b/install
@@ -7,7 +7,8 @@ DOTFILES="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 
 # Neovim
 rm -rf $HOME/.config/nvim
-ln -s $DOTFILES/nvim $HOME/.config/nvim
+ech o "Skipping neovim"
+# ln -s $DOTFILES/nvim $HOME/.config/nvim
 
 # Kitty
 rm -rf $HOME/.config/kitty
