--- a/install
+++ b/install
@@ -7,8 +7,7 @@ DOTFILES="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 
 # Neovim
 rm -rf $HOME/.config/nvim
-ech o "Skipping neovim"
-# ln -s $DOTFILES/nvim $HOME/.config/nvim
+ln -s $DOTFILES/nvim $HOME/.config/nvim
 
 # Kitty
 rm -rf $HOME/.config/kitty
@@ -31,7 +30,6 @@ mkdir -p $HOME/.local/bin
 
 ln -sf $DOTFILES/scripts/t $HOME/.local/bin/t
 ln -sf $DOTFILES/scripts/deliver $HOME/.local/bin/deliver
-
 
 # Oh My Zsh
 # if [ ! -d "$HOME/.oh-my-zsh" ]; then
