--- a/install
+++ b/install
@@ -10,8 +10,8 @@ rm -rf $HOME/.config/nvim
 ln -s $DOTFILES/nvim $HOME/.config/nvim
 
 # Kitty
-rm -rf $HOME/.config/kitty
-ln -s $DOTFILES/kitty $HOME/.config/kitty
+# rm -rf $HOME/.config/kitty
+# ln -s $DOTFILES/kitty $HOME/.config/kitty
 
 # Tmux
 ln -sf $DOTFILES/tmux/tmux.conf $HOME/.tmux.conf
